[BACKLOG-15721] fix for premature horizontal scrolling in folder tree...lines 58 and 69 in spreadsheet (#4194)

--- a/plugins/file-open-save/core/src/main/javascript/app/components/folder/folder.css
+++ b/plugins/file-open-save/core/src/main/javascript/app/components/folder/folder.css
@@ -26,7 +26,7 @@ folder .folder {
   padding: 5px 0;
   cursor: pointer;
   white-space: nowrap;
-  width: 100%;
+  width: auto;
 }
 
 folder .folder:hover {
